add_subdirectory(queue1)
add_subdirectory(queue2)
add_subdirectory(queue3)
add_subdirectory(queue4)
add_subdirectory(queue5)
add_subdirectory(queue6)

add_subdirectory(amac1)

add_subdirectory(mmdriver1)
add_subdirectory(mmdriver2)

add_subdirectory(route1)
add_subdirectory(udpdriver1)
add_subdirectory(udpdriver2)
add_subdirectory(udpdriver3)

add_subdirectory(iridiumdriver1)

add_subdirectory(benthos_atm900_driver1)

add_subdirectory(ipcodecs)

add_subdirectory(udp_multicast_driver1)

add_subdirectory(dynamic_buffer1)
