add_subdirectory(hex_codec)
add_subdirectory(as)
add_subdirectory(sci)
add_subdirectory(nmea)
add_subdirectory(seawater)
add_subdirectory(base255)
add_subdirectory(geodesy)
add_subdirectory(debug_logger)
add_subdirectory(units)
add_subdirectory(linebasedcomms)

if(enable_ais)
  add_subdirectory(ais)
endif()
